The Plugin has been aligned with the latest improvements in Spazio IT's AdaLang_Analyzer.